istio-ftp/ftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ftp
  labels:
    app: my-ftp
spec:
  ports:
  - name : ftp-server
    port: 22
  selector:
    app: my-ftp
