istio-ftp/ftp-destionrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-ftp-destination
spec:
  host: "*"
  subsets:
  - name: v1
    labels:
      version: v1
