istio-ftp/ftp-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-ftp-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-ftp-gateway
  tcp:
  - match:
    - port: 31400
    route:
    - destination:
        host: my-ftp
        port:
          number: 22
        subset: v1
